# jnj-android

./: .gitignore  CLAUDE.md  PRD.md
_docs/: README.md
_docs/planning/: architecture.md  memo.md  memo2.md  memo3.md
_docs/planning/claude/: 00-개발 순서.md  11-Ubuntu XFCE 서버 환경 준비.md  12-Android 개발 환경 설치.md  13-Android 에뮬레이터 생성 및 설정.md  14-1.Waydroid.md  14-Rise of Kingdoms 설치 및 초기 설정.md
_docs/planning/genspark/: session01.md
_docs/requirements/: TRD.md
backend/python/: pyproject.toml  test_adb.py
backend/python/docs/: todos.md
backend/python/docs/chats/: 001.md
backend/python/src/servers/: __init__.py  main.py
