[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "adb-shell>=0.4.4",
    "fastapi>=0.118.0",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
